[package]
name = "ct-aes"
version = "0.1.1"
description = """
Constant time AES.
"""
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://docs.rs/ct-aes"
repository = "https://github.com/ericlagergren/ct-aes"
keywords = [ "aes", "constant-time" ]
categories = [ "cryptography", "no-std", "no-std::no-alloc" ]

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
alloc_instead_of_core = "warn"
arithmetic_side_effects = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
expect_used = "warn"
implicit_saturating_sub = "warn"
indexing_slicing = "warn"
missing_panics_doc = "warn"
panic = "warn"
ptr_as_ptr = "warn"
string_slice = "warn"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[features]
default = ["zeroize"]

# Enable functions specific to SNOW-V.
snowv = []

# Enable `std`. Currently unused.
std = []

# Enable zeroize support.
zeroize = ["dep:zeroize"]

[dependencies]
zeroize = { version = "1.8", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
hex = { version = "0.4", features = ["serde"] }
hex-literal = { version = "0.4" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1" }

[[bench]]
name = "lib"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
always_include_features = []
